fix: video slider overflow

--- a/museum/src/scss/blocks/modal.scss
+++ b/museum/src/scss/blocks/modal.scss
@@ -7,7 +7,7 @@
   background-color: rgba(0, 0, 0, 0);
   position: fixed;
   top: 0;
-  left: -100vw;
+  left: -100%;
   z-index: 2000;
   overflow-y: auto;
   &.open {
