--- a/museum/src/scss/blocks/video.scss
+++ b/museum/src/scss/blocks/video.scss
@@ -88,6 +88,7 @@
   margin: 40px 0;
   display: flex;
   justify-content: space-between;
+  overflow-x: hidden;
 }
 
 .video-slider__pagination {
